<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/screen"
    android:background="?attr/background"
    tools:context=".Activitys.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/toolbar_text"
                android:text="@string/profile"
                style="@style/toolbar_profile_text" />

            <ImageView
                android:id="@+id/more"
                style="@style/image_more"
                android:src="@drawable/ic_more"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollY="1000dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/nav_panel">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        style="@style/image_profile"
                        android:src="@drawable/pic1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/name"
                        style="@style/name_text"
                        android:text="@string/name"
                        app:layout_constraintStart_toEndOf="@+id/profile_image"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:text="@string/actress"
                        android:id="@+id/profession"
                        style="@style/profession_text"
                        app:layout_constraintTop_toBottomOf="@+id/name"
                        app:layout_constraintStart_toEndOf="@+id/profile_image"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/site_text"
                        style="@style/site_text"
                        android:text="@string/https_www_instagram_com_keiraknightleyofficialpage"
                        app:layout_constraintStart_toEndOf="@+id/profile_image"
                        app:layout_constraintTop_toBottomOf="@+id/profession"
                        tools:ignore="MissingConstraints" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/count_likes"
                        style="@style/information_text"
                        android:text="@string/_0"
                        app:layout_constraintBottom_toTopOf="@id/text_likes"
                        app:layout_constraintEnd_toEndOf="@+id/text_likes"
                        app:layout_constraintHorizontal_bias="0.548"
                        app:layout_constraintStart_toStartOf="@+id/text_likes"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/count_followers"
                        style="@style/information_text"
                        android:text="@string/_0"
                        app:layout_constraintBaseline_toBaselineOf="@id/count_likes"
                        app:layout_constraintEnd_toEndOf="@+id/text_followers"
                        app:layout_constraintHorizontal_bias="0.527"
                        app:layout_constraintStart_toStartOf="@+id/text_followers"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/count_following"
                        style="@style/information_text"
                        android:text="@string/_0"
                        app:layout_constraintBaseline_toBaselineOf="@id/count_likes"
                        app:layout_constraintEnd_toEndOf="@+id/text_following"
                        app:layout_constraintStart_toStartOf="@+id/text_following"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/text_likes"
                        style="@style/information_text_text"
                        android:text="@string/posts"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/count_likes"
                        app:layout_constraintEnd_toStartOf="@id/text_followers"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/text_followers"
                        style="@style/information_text_text"
                        android:text="@string/followers"
                        app:layout_constraintBaseline_toBaselineOf="@id/text_likes"
                        app:layout_constraintStart_toEndOf="@id/text_likes"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/text_following"
                        style="@style/information_text_following"
                        android:text="@string/following"
                        app:layout_constraintBaseline_toBaselineOf="@id/text_likes"
                        app:layout_constraintStart_toEndOf="@+id/text_followers"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:ignore="MissingConstraints" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btn_following"
                        style="@style/btn_following"
                        android:text="@string/following_btn"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                    <Button
                        android:id="@+id/share"
                        style="@style/btn_share"
                        app:layout_constraintBaseline_toBaselineOf="@id/btn_following"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/btn_following"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_following"
                tools:layout_editor_absoluteX="100dp" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:id="@+id/nav_panel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>