<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/current_photo"
        style="@style/main_photo"
        app:riv_corner_radius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/main"
        />
    <ImageView
        android:id="@+id/btn_likes"
        style="@style/like_and_comments"
        android:src="@drawable/ic_likes"
        app:layout_constraintBottom_toTopOf="@+id/count_like"
        app:layout_constraintEnd_toEndOf="@+id/count_like"
        app:layout_constraintStart_toStartOf="@+id/count_like"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/btn_comments"
        style="@style/like_and_comments"
        android:src="@drawable/ic_comments"
        app:layout_constraintBottom_toTopOf="@+id/count_comments"
        app:layout_constraintEnd_toEndOf="@+id/count_comments"
        app:layout_constraintStart_toStartOf="@+id/count_comments"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/btn_marker"
        style="@style/marker"
        android:src="@drawable/ic_marker_no_active"
        app:layout_constraintBottom_toBottomOf="@+id/current_photo"
        app:layout_constraintEnd_toEndOf="@+id/current_photo"
        app:layout_constraintStart_toEndOf="@+id/btn_comments"
        android:layout_marginStart="180dp"
        tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/count_like"
            style="@style/likes_count"
            android:text="@string/_100"
            app:layout_constraintBottom_toBottomOf="@id/current_photo"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/count_comments"
            android:text="@string/_2"
            app:layout_constraintBottom_toBottomOf="@id/current_photo"
            app:layout_constraintStart_toEndOf="@+id/count_like"
            style="@style/comments_count"
            tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/comment_from_first_person"
        style="@style/comment_text"
        android:text="@string/comment_first"
        app:layout_constraintStart_toEndOf="@+id/person_first_photo"
        app:layout_constraintTop_toBottomOf="@+id/person_first"
        tools:ignore="MissingConstraints" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/person_first_photo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/petrov"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_photo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/person_first"
        android:text="@string/petrov_alex"
        style="@style/comment_person"
        app:layout_constraintStart_toEndOf="@+id/person_first_photo"
        app:layout_constraintTop_toTopOf="@+id/person_first_photo"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/edit_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/write_comment"
            style="@style/enter_comment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintStart_toEndOf="@id/ic_me"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ic_me"
            style="@style/me"
            app:layout_constraintEnd_toStartOf="@id/write_comment"
            app:layout_constraintHorizontal_bias="0.421"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>